--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>testgit 3</title>
   </head>
   <body>
-    viết gì cơi
+    <h1>CC gì cũng đc</h1>
+    <h2>Sửa lần 1</h2>
   </body>
 </html>
